--- a/secrets.py.example
+++ b/secrets.py.example
@@ -3,3 +3,5 @@
 trello_api_key = 'xxxxxxxxxxxx'
 trello_oauth_token = 'xxxxxxxxxxxx'
 
+google_service_account_id = 'xxxxxxxxxxxxx'
+google_service_account_email = 'xxxxxxxxxxxx'
