Add necessary libs and little example of extracting/parsing DOM from a google doc.
Test Plan: deploy to znd, hit /googletest, check logs for znd, verify that example google doc title is logged along w/ all html w/in <body>

Reviewers: marcia

Reviewed By: marcia

Differential Revision: https://phabricator.khanacademy.org/D20006

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "third_party/uritemplate-src"]
 	path = third_party/uritemplate-src
 	url = https://github.com/uri-templates/uritemplate-py.git
+[submodule "third_party/pyquery-src"]
+	path = third_party/pyquery-src
+	url = https://github.com/gawel/pyquery.git
+[submodule "third_party/cssselect-src"]
+	path = third_party/cssselect-src
+	url = https://github.com/SimonSapin/cssselect.git
