Add incomplete scaffolding for listening to inbound email, parsing for gdocs links, and grabbing data from google drive API.
Test Plan: deploy to default (not znd due to need to listen to incoming email), send email to new-projects@khan-big-board.appspotmail.com containing a google docs URL, check logs and make sure they contain title of linked google doc

Reviewers: marcia

Differential Revision: https://phabricator.khanacademy.org/D20009

--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,9 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /_ah/mail/new-projects@khan-big-board.appspotmail.com
+  script: mail.app
+  login: admin
 - url: /.*
   script: main.app
 
@@ -13,6 +16,9 @@ libraries:
   version: latest
 - name: lxml
   version: 2.3.5
+
+inbound_services:
+- mail
 
 skip_files:
 ####
