Drop in html email so it looks prettier
Test Plan:
Visit localhost:8000/mail
From: marcia@khanacademy.org
To: new-projects@khan-big-board.appspotmail.com

Body with two docs:
https://docs.google.com/document/d/1YZCRQnxUg2GAgsFjW6SQ_okyO8mHp3Ff7E2hXG0tKUg/edit

https://docs.google.com/document/d/1KByn1RUhm6DyEGHB1dj9BRyDUxBOKFw2Nh4xWyQUv6M/edit

Send mail, and then check my real marcia@khanacademy.org email, see this beauty:
https://s3.amazonaws.com/uploads.hipchat.com/6574/17223/DJMj7iek1nTlqgW/upload.png

Send mail with just one link, see this beauty (the call to action text + urls change to just the one card):
https://s3.amazonaws.com/uploads.hipchat.com/6574/17223/Tj2uC1H7mCzBLqi/upload.png

Temporarily comment out the html thing and see that the text only emails are at least usable:
https://s3.amazonaws.com/uploads.hipchat.com/6574/17223/ifkHcmHD1yolibv/upload.png

Reviewers: ben

Reviewed By: ben

Differential Revision: https://phabricator.khanacademy.org/D20030

--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,8 @@ libraries:
   version: 2.3.5
 - name: pycrypto
   version: "latest"
+- name: jinja2
+  version: latest
 
 inbound_services:
 - mail
