Move google + trello hacking over to a task queue
Summary: Finding cards, creating cards, editing docs... these all take time, and now they take time in a task queue!

Test Plan:
Our fancy tests at:
python testrunner.py ~/khan/webapp/third_party/frankenserver .

Our manual fancy test at:
localhost:8000/mail

From: marcia@khanacademy.org
To: new-projects@khan-big-board.appspotmail.com
Subject: "Here is my awesome project doc"

Body linking to this: https://docs.google.com/document/d/1oIiQfAqvmCZKFn5SZDKjvRUjeT4cz6QkE0NkxrRpZ30/edit

Hit "Send email" and then check my ka email for the lovely auto response!

Reviewers: ben

Reviewed By: ben

Differential Revision: https://phabricator.khanacademy.org/D20042

--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,9 @@ handlers:
   login: admin
 - url: /.*
   script: main.app
+- url: /_ah/queue/deferred
+    script: google.appengine.ext.deferred.deferred.application
+    login: admin
 
 libraries:
 - name: ssl
@@ -39,3 +42,6 @@ skip_files:
 # The one exception is javascript-khansrc, which is handled with the
 # javascript code above.
 - ^third_party/.*-src$
+
+builtins:
+- deferred: on
