--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "third_party/cssselect-src"]
 	path = third_party/cssselect-src
 	url = https://github.com/SimonSapin/cssselect.git
+[submodule "third_party/email-reply-parser-src"]
+	path = third_party/email-reply-parser-src
+	url = https://github.com/zapier/email-reply-parser.git
