--- a/app.yaml
+++ b/app.yaml
@@ -8,11 +8,18 @@ handlers:
 - url: /_ah/mail/new-projects@khan-big-board.appspotmail.com
   script: mail.app
   login: admin
-- url: /.*
-  script: main.app
+
+- url: /_ah/mail/no-reply@khan-big-board.appspotmail.com
+  script: mail_ignore.app
+  login: admin
+
 - url: /_ah/queue/deferred
   script: google.appengine.ext.deferred.deferred.application
   login: admin
+
+- url: /.*
+  script: main.app
+
 
 libraries:
 - name: ssl
