Add the retro raccoon image ;)
Test plan: none

--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,9 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /images
+  static_dir: images
+
 - url: /_ah/mail/new-projects@khan-big-board.appspotmail.com
   script: mail.app
   login: admin
